AMP-18238 updated collapsed sidebar design & fixed map-header
git-svn-id: file:///svn/branches/AMP_2_10_RELEASE@24950 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/gisModule/dev/app/less/components/amp-map.less
+++ b/amp/TEMPLATE/ampTemplate/gisModule/dev/app/less/components/amp-map.less
@@ -14,11 +14,29 @@
   border-radius: 0 0 0 5px;
   overflow: hidden;
 
+  //Override the attribution according to sidebar's current width
+  &.sidebar-icons-only .leaflet-left {
+    left: @amp_sidebar_icons_only_width;
+  }
+
+  //override the header accoridng to the sidebar's current width
+  &.sidebar-icons-only #map-header {
+    left: @amp_sidebar_icons_only_width;
+    right: 0;
+    width: auto;
+  }
+
+  //Override the attribution .leaflet-control according to sidebar's current width
+  .leaflet-left {
+    left: @amp_sidebar_width;
+  }
 
   #map-header {
     z-index: @amp_map_header_layer;
     position: absolute;
-    width: 100%;
+    width: auto;
+    left: @amp_sidebar_width;
+    right: 0;
     color: @amp_map_header;
     background: @amp_map_header_bg;
     border: none;
@@ -37,7 +55,8 @@
     }
 
     .navbar-brand {
-      width:60%;
+      width:auto;
+      min-width: 140px; /* mobile compatible minimum */
       border-right: 1px solid @amp_lightline;
       font-size: 1em;
       font-weight: @extrabold;
